--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -917,46 +917,48 @@ jobs:
           export LD_LIBRARY_PATH=${INSTALL_TEST_DIR}:$LD_LIBRARY_PATH
           python3 ${OPENVINO_REPO}/docs/snippets/main.py
 
-      # - name: Model Optimizer unit tests
-      #   run: |
-      #     export PYTHONPATH=${INSTALL_TEST_DIR}:$PYTHONPATH
-      #     # required for MxNet
-      #     apt-get install -y libgomp1 libquadmath0
-
-      #     python3 -m pytest -s ${INSTALL_TEST_DIR}/mo/unit_tests \
-      #         --junitxml=${INSTALL_TEST_DIR}/TEST-ModelOptimizer.xml
-
-      - name: PyTorch Layer Tests
+      - name: Model Optimizer unit tests
+        if: ${{ always() }}
         run: |
-          python3 -m pip install -r ${LAYER_TESTS_INSTALL_DIR}/requirements.txt
-          # PyTorch Layer Tests
-          python3 -m pytest ${LAYER_TESTS_INSTALL_DIR}/pytorch_tests -m precommit --junitxml=${INSTALL_TEST_DIR}/TEST-pytorch.xml > TEST-pytorch.log &
-          # TensorFlow 1 Layer Tests - TF FE
-          python3 -m pytest ${LAYER_TESTS_INSTALL_DIR}/tensorflow_tests/ --use_new_frontend -m precommit_tf_fe --junitxml=${INSTALL_TEST_DIR}/TEST-tf_fe.xml > TEST-tf_fe.log &
-          # TensorFlow 2 Layer Tests - TF FE
-          python3 -m pytest ${LAYER_TESTS_INSTALL_DIR}/tensorflow2_keras_tests/ --use_new_frontend -m precommit_tf_fe --junitxml=${INSTALL_TEST_DIR}/TEST-tf2_fe.xml > TEST-tf2_fe.log &
-          # JAX Layer Tests - TF FE
-          python3 -m pytest ${LAYER_TESTS_INSTALL_DIR}/jax_tests/ -m precommit --junitxml=${INSTALL_TEST_DIR}/TEST-jax.xml > TEST-jax.log &
-          # TensorFlow 1 Layer Tests - Legacy FE
-          python3 -m pytest ${LAYER_TESTS_INSTALL_DIR}/tensorflow_tests/test_tf_Roll.py --ir_version=10 --junitxml=${INSTALL_TEST_DIR}/TEST-tf_Roll.xml > TEST-tf_Roll.log &
-          # TensorFlow 2 Layer Tests - Legacy FE
-          python3 -m pytest ${LAYER_TESTS_INSTALL_DIR}/tensorflow2_keras_tests/test_tf2_keras_activation.py --ir_version=11 --junitxml=${INSTALL_TEST_DIR}/TEST-tf2_Activation.xml -k "sigmoid" > TEST-tf2_Activation.log &
-          # TensorFlow Lite Layer Tests - TFL FE
-          python3 -m pytest ${LAYER_TESTS_INSTALL_DIR}/tensorflow_lite_tests/ --junitxml=${INSTALL_TEST_DIR}/TEST-tfl_fe.xml > TEST-tfl_fe.log &
+          export PYTHONPATH=${INSTALL_TEST_DIR}:$PYTHONPATH
+          # required for MxNet
+          apt-get install -y libgomp1 libquadmath0
 
-          wait
-          cat TEST-tfl_fe.log
-          cat TEST-tf2_Activation.log
-          cat TEST-tf_Roll.log
-          cat TEST-jax.log
-          cat TEST-tf2_fe.log
-          cat TEST-tf_fe.log
-          cat TEST-pytorch.log
+          python3 -m pytest -n logical -s ${INSTALL_TEST_DIR}/mo/unit_tests \
+              --junitxml=${INSTALL_TEST_DIR}/TEST-ModelOptimizer.xml
+
+      # - name: PyTorch Layer Tests
+      #   run: |
+      #     python3 -m pip install -r ${LAYER_TESTS_INSTALL_DIR}/requirements.txt
+      #     # PyTorch Layer Tests
+      #     python3 -m pytest ${LAYER_TESTS_INSTALL_DIR}/pytorch_tests -m precommit --junitxml=${INSTALL_TEST_DIR}/TEST-pytorch.xml > TEST-pytorch.log &
+      #     # TensorFlow 1 Layer Tests - TF FE
+      #     python3 -m pytest ${LAYER_TESTS_INSTALL_DIR}/tensorflow_tests/ --use_new_frontend -m precommit_tf_fe --junitxml=${INSTALL_TEST_DIR}/TEST-tf_fe.xml > TEST-tf_fe.log &
+      #     # TensorFlow 2 Layer Tests - TF FE
+      #     python3 -m pytest ${LAYER_TESTS_INSTALL_DIR}/tensorflow2_keras_tests/ --use_new_frontend -m precommit_tf_fe --junitxml=${INSTALL_TEST_DIR}/TEST-tf2_fe.xml > TEST-tf2_fe.log &
+      #     # JAX Layer Tests - TF FE
+      #     python3 -m pytest ${LAYER_TESTS_INSTALL_DIR}/jax_tests/ -m precommit --junitxml=${INSTALL_TEST_DIR}/TEST-jax.xml > TEST-jax.log &
+      #     # TensorFlow 1 Layer Tests - Legacy FE
+      #     python3 -m pytest ${LAYER_TESTS_INSTALL_DIR}/tensorflow_tests/test_tf_Roll.py --ir_version=10 --junitxml=${INSTALL_TEST_DIR}/TEST-tf_Roll.xml > TEST-tf_Roll.log &
+      #     # TensorFlow 2 Layer Tests - Legacy FE
+      #     python3 -m pytest ${LAYER_TESTS_INSTALL_DIR}/tensorflow2_keras_tests/test_tf2_keras_activation.py --ir_version=11 --junitxml=${INSTALL_TEST_DIR}/TEST-tf2_Activation.xml -k "sigmoid" > TEST-tf2_Activation.log &
+      #     # TensorFlow Lite Layer Tests - TFL FE
+      #     python3 -m pytest ${LAYER_TESTS_INSTALL_DIR}/tensorflow_lite_tests/ --junitxml=${INSTALL_TEST_DIR}/TEST-tfl_fe.xml > TEST-tfl_fe.log &
+
+      #     wait
+      #     cat TEST-tfl_fe.log
+      #     cat TEST-tf2_Activation.log
+      #     cat TEST-tf_Roll.log
+      #     cat TEST-jax.log
+      #     cat TEST-tf2_fe.log
+      #     cat TEST-tf_fe.log
+      #     cat TEST-pytorch.log
 
       - name: Python ONNX operators tests
+        if: ${{ always() }}
         run: |
           # Skip test_onnx/test_zoo_models and test_onnx/test_backend due to long execution time - ONNX Model Zoo tests are run separately
-          python3 -m pytest -sv ${OPENVINO_REPO}/src/frontends/onnx/tests -k 'not cuda' \
+          python3 -m pytest -n logical -sv ${OPENVINO_REPO}/src/frontends/onnx/tests -k 'not cuda' \
             --junitxml=${INSTALL_TEST_DIR}/TEST-onnx_frontend.xml \
             --ignore=${OPENVINO_REPO}/src/frontends/onnx/tests/test_python/test_zoo_models.py \
             --ignore=${OPENVINO_REPO}/src/frontends/onnx/tests/test_python/test_backend.py
