--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -1224,13 +1224,12 @@ jobs:
         run: |
           PIP_VER=$(python3 -c "import pip; print(pip.__version__)")
           echo "Using pip version: ${PIP_VER}"
-          chmod -R a+w ${PIP_CACHE_PATH}/${PIP_VER}
           echo "PIP_CACHE_DIR=${PIP_CACHE_PATH}/${PIP_VER}" >> $GITHUB_ENV
       - name: Get pip cache info
         run: |
-          chmod -R a +w ${PIP_CACHE_PATH}/${PIP_VER}
+          chmod -R a+w ${PIP_CACHE_DIR}
           echo "Cache size: "
-          du -h -d2 ${PIP_CACHE_PATH}
+          du -h -d2 ${PIP_CACHE_DIR}
           echo "Cache info: "
           python -m pip cache info
 
