--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -332,7 +332,7 @@ jobs:
 
       # Ticket - 115085
       - name: PyTorch Layer Tests
-        if: ${{ 'false' }} && matrix.test_group == 'pytorch'
+        if: matrix.test_group == 'pytorch'
         shell: cmd
         run: |
           python3 -m pip install -r ${{ env.LAYER_TESTS_INSTALL_DIR }}/requirements.txt
