--- a/tests/layer_tests/requirements.txt
+++ b/tests/layer_tests/requirements.txt
@@ -7,5 +7,5 @@ torchvision
 transformers
 pytest
 tensorflow-addons; python_version <= '3.10' and (sys_platform != 'linux' or platform_machine == 'x86_64')
-# jax; sys_platform == "linux"
-# jaxlib; sys_platform == "linux"
+jax; sys_platform == "linux"
+jaxlib; sys_platform == "linux"
