--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -924,7 +924,7 @@ jobs:
           # required for MxNet
           apt-get install -y libgomp1 libquadmath0
 
-          python3 -m pytest -n logical -s ${INSTALL_TEST_DIR}/mo/unit_tests \
+          python3 -m pytest -n logical --dist loadscope -s ${INSTALL_TEST_DIR}/mo/unit_tests \
               --junitxml=${INSTALL_TEST_DIR}/TEST-ModelOptimizer.xml
 
       # - name: PyTorch Layer Tests
